<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >
    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_details_heading"
      android:layout_gravity="center"
       android:textColor="@color/black"
android:textSize="20sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/border">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
       android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
   />
        <TextView
            android:id="@+id/full_name"
          android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
       />
        <TextView
            android:id="@+id/email"
     android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
        <TextView
            android:id="@+id/mobile_number"
     android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
           />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
        <TextView
            android:id="@+id/pass_word"
    android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
           />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
        <TextView
            android:id="@+id/gender"
 android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
          />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/martial_status"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
     />

        <TextView
            android:id="@+id/martial_status"
      android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_o_b"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
        <TextView
            android:id="@+id/dob"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permanent_address"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
        <TextView
            android:id="@+id/permanent_address"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
           />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permanent_state"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/permanent_state"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permanent_city"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/permanent_city"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permanent_pincode"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/permanent_pincode"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_address"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
        <TextView
            android:id="@+id/curr_address"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_state"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
        <TextView
            android:id="@+id/cur_state"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"

           />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_city"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/cur_city"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_pincode"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/cur_pincode"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adhaar_number"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/aadhaar"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_loans"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/loan"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pan_number"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/pan"
       android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/grey"/>




    </LinearLayout>

    </LinearLayout>