<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_details_heading"
        android:layout_gravity="center"
       android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/border">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_code"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/employee_code"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/occupation"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
<!--        <View-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@android:color/darker_gray"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employement_type"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/employement_type"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_company_experiance"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/cur_company_experiance"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_experiance"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/total_experiance"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_income"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/monthly_income"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />
<!--        <View-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@android:color/darker_gray"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/company_name"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_website"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/comapany_website"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_address"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/company_address"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annual_turn_over"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/ann_turn_over"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>

    </LinearLayout>
